Setup Elabs 4.1 support branch of Midpoint