@@ -1,17 +1,8 @@
 /*
- * Copyright (c) 2010-2018 Evolveum
+ * Copyright (c) 2010-2019 Evolveum and contributors
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * This work is dual-licensed under the Apache License 2.0
+ * and European Union Public License. See LICENSE file for details.
  */
 
 package com.evolveum.midpoint.model.impl.integrity;
@@ -22,7 +13,6 @@ import com.evolveum.midpoint.common.refinery.RefinedResourceSchemaImpl;
 import com.evolveum.midpoint.model.common.SystemObjectCache;
 import com.evolveum.midpoint.model.impl.sync.SynchronizationContext;
 import com.evolveum.midpoint.model.impl.sync.SynchronizationService;
-import com.evolveum.midpoint.model.impl.util.ModelImplUtils;
 import com.evolveum.midpoint.prism.*;
 import com.evolveum.midpoint.prism.delta.*;
 import com.evolveum.midpoint.prism.equivalence.EquivalenceStrategy;
@@ -39,8 +29,10 @@ import com.evolveum.midpoint.schema.SelectorOptions;
 import com.evolveum.midpoint.schema.constants.SchemaConstants;
 import com.evolveum.midpoint.schema.result.OperationResult;
 import com.evolveum.midpoint.schema.util.ObjectTypeUtil;
+import com.evolveum.midpoint.task.api.RunningTask;
 import com.evolveum.midpoint.task.api.Task;
 import com.evolveum.midpoint.task.api.TaskManager;
+import com.evolveum.midpoint.task.api.TaskUtil;
 import com.evolveum.midpoint.util.DebugUtil;
 import com.evolveum.midpoint.util.exception.*;
 import com.evolveum.midpoint.util.logging.LoggingUtils;
@@ -49,10 +41,11 @@ import com.evolveum.midpoint.util.logging.TraceManager;
 import com.evolveum.midpoint.xml.ns._public.common.common_3.*;
 
 import javax.xml.namespace.QName;
+import java.lang.reflect.InvocationTargetException;
 import java.util.*;
 
 /**
- * @author mederly
+ *
  */
 public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeResultHandler<ShadowType> {
 
@@ -60,8 +53,8 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
 
     private static final String CLASS_DOT = ShadowIntegrityCheckResultHandler.class.getName() + ".";
     private static final String DEFAULT_DUPLICATE_SHADOWS_RESOLVER_CLASS_NAME = DefaultDuplicateShadowsResolver.class.getName();
-    public static final String KEY_EXISTS_ON_RESOURCE = CLASS_DOT + "existsOnResource";
-    public static final String KEY_OWNERS = CLASS_DOT + "owners";
+    static final String KEY_EXISTS_ON_RESOURCE = CLASS_DOT + "existsOnResource";
+    static final String KEY_OWNERS = CLASS_DOT + "owners";
 
     private PrismContext prismContext;
     private ProvisioningService provisioningService;
@@ -87,21 +80,19 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
 
     private boolean dryRun;
 
-    public static final String INTENTS = "intents";
-    public static final String UNIQUENESS = "uniqueness";
-    public static final String NORMALIZATION = "normalization";
-    public static final String OWNERS = "owners";
-    public static final String FETCH = "fetch";
-    public static final String EXTRA_DATA = "extraData";
-    public static final String RESOURCE_REF = "resourceRef";
-    public static final List<String> KNOWN_KEYS =
+    private static final String INTENTS = "intents";
+    private static final String UNIQUENESS = "uniqueness";
+    private static final String NORMALIZATION = "normalization";
+    private static final String OWNERS = "owners";
+    private static final String FETCH = "fetch";
+    private static final String EXTRA_DATA = "extraData";
+    private static final String RESOURCE_REF = "resourceRef";
+    private static final List<String> KNOWN_KEYS =
             Arrays.asList(INTENTS, UNIQUENESS, NORMALIZATION, OWNERS, FETCH, EXTRA_DATA, RESOURCE_REF);
 
     private Map<ContextMapKey, ObjectTypeContext> contextMap = new HashMap<>();
 
     private Map<String,PrismObject<ResourceType>> resources = new HashMap<>();
-
-    private PrismObject<SystemConfigurationType> configuration;
 
     private ShadowStatistics statistics = new ShadowStatistics();
 
@@ -109,12 +100,11 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
     private Set<String> duplicateShadowsDetected = new HashSet<>();
     private Set<String> duplicateShadowsDeleted = new HashSet<>();
 
-    public ShadowIntegrityCheckResultHandler(Task coordinatorTask, String taskOperationPrefix, String processShortName,
+    ShadowIntegrityCheckResultHandler(RunningTask coordinatorTask, String taskOperationPrefix, String processShortName,
             String contextDesc, TaskManager taskManager, PrismContext prismContext,
             ProvisioningService provisioningService, MatchingRuleRegistry matchingRuleRegistry,
             RepositoryService repositoryService, SynchronizationService synchronizationService,
-            SystemObjectCache systemObjectCache,
-            OperationResult result) {
+            SystemObjectCache systemObjectCache) {
         super(coordinatorTask, taskOperationPrefix, processShortName, contextDesc, taskManager);
         this.prismContext = prismContext;
         this.provisioningService = provisioningService;
@@ -130,7 +120,7 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
             throw new UnsupportedOperationException("Unsupported number of worker threads: " + tasks + ". This task cannot be run with worker threads. Please remove workerThreads extension property or set its value to 0.");
         }
 
-        PrismProperty<String> diagnosePrismProperty = coordinatorTask.getExtensionProperty(SchemaConstants.MODEL_EXTENSION_DIAGNOSE);
+        PrismProperty<String> diagnosePrismProperty = coordinatorTask.getExtensionPropertyOrClone(SchemaConstants.MODEL_EXTENSION_DIAGNOSE);
         if (diagnosePrismProperty == null || diagnosePrismProperty.isEmpty()) {
             checkIntents = true;
             checkUniqueness = true;
@@ -147,7 +137,7 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
             checkExtraData = contains(diagnosePrismProperty, EXTRA_DATA);
             checkProperty(diagnosePrismProperty);
         }
-        PrismProperty<String> fixPrismProperty = coordinatorTask.getExtensionProperty(SchemaConstants.MODEL_EXTENSION_FIX);
+        PrismProperty<String> fixPrismProperty = coordinatorTask.getExtensionPropertyOrClone(SchemaConstants.MODEL_EXTENSION_FIX);
         if (fixPrismProperty == null || fixPrismProperty.isEmpty()) {
             fixIntents = false;
             fixUniqueness = false;
@@ -177,7 +167,7 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
         }
 
         if (fixUniqueness) {
-            PrismProperty<String> duplicateShadowsResolverClass = coordinatorTask.getExtensionProperty(SchemaConstants.MODEL_EXTENSION_DUPLICATE_SHADOWS_RESOLVER);
+            PrismProperty<String> duplicateShadowsResolverClass = coordinatorTask.getExtensionPropertyOrClone(SchemaConstants.MODEL_EXTENSION_DUPLICATE_SHADOWS_RESOLVER);
             String duplicateShadowsResolverClassName;
             if (duplicateShadowsResolverClass != null) {
                 duplicateShadowsResolverClassName = duplicateShadowsResolverClass.getRealValue();
@@ -185,25 +175,21 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
                 duplicateShadowsResolverClassName = DEFAULT_DUPLICATE_SHADOWS_RESOLVER_CLASS_NAME;
             }
             try {
-                duplicateShadowsResolver = (DuplicateShadowsResolver) Class.forName(duplicateShadowsResolverClassName).newInstance();
-            } catch (InstantiationException | IllegalAccessException | ClassNotFoundException | ClassCastException e) {
+                duplicateShadowsResolver = (DuplicateShadowsResolver) Class.forName(duplicateShadowsResolverClassName)
+                        .getDeclaredConstructor().newInstance();
+            } catch (InstantiationException | IllegalAccessException | ClassNotFoundException | ClassCastException
+                    | NoSuchMethodException | InvocationTargetException e) {
                 throw new SystemException("Couldn't instantiate duplicate shadows resolver " + duplicateShadowsResolverClassName);
             }
         }
 
-        PrismProperty<Boolean> checkDuplicatesOnPrimaryIdentifiersOnlyProperty = coordinatorTask.getExtensionProperty(SchemaConstants.MODEL_EXTENSION_CHECK_DUPLICATES_ON_PRIMARY_IDENTIFIERS_ONLY);
+        PrismProperty<Boolean> checkDuplicatesOnPrimaryIdentifiersOnlyProperty = coordinatorTask.getExtensionPropertyOrClone(SchemaConstants.MODEL_EXTENSION_CHECK_DUPLICATES_ON_PRIMARY_IDENTIFIERS_ONLY);
         if (checkDuplicatesOnPrimaryIdentifiersOnlyProperty != null && checkDuplicatesOnPrimaryIdentifiersOnlyProperty.getRealValue() != null) {
             checkDuplicatesOnPrimaryIdentifiersOnly = checkDuplicatesOnPrimaryIdentifiersOnlyProperty.getRealValue();
         }
 
         try {
-            configuration = systemObjectCache.getSystemConfiguration(result);
-        } catch (SchemaException e) {
-            throw new SystemException("Couldn't get system configuration", e);
-        }
-
-        try {
-            dryRun = ModelImplUtils.isDryRun(coordinatorTask);
+            dryRun = TaskUtil.isDryRun(coordinatorTask);
         } catch (SchemaException e) {
             throw new SystemException("Couldn't get dryRun flag from task " + coordinatorTask);
         }
@@ -245,7 +231,7 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
     }
 
     @Override
-    protected boolean handleObject(PrismObject<ShadowType> shadow, Task workerTask, OperationResult parentResult) throws CommonException {
+    protected boolean handleObject(PrismObject<ShadowType> shadow, RunningTask workerTask, OperationResult parentResult) throws CommonException {
         OperationResult result = parentResult.createMinorSubresult(CLASS_DOT + "handleObject");
         ShadowCheckResult checkResult = new ShadowCheckResult(shadow);
         try {
@@ -303,7 +289,7 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
         if (resourceOid == null) {
             checkResult.recordError(ShadowStatistics.NO_RESOURCE_OID, new SchemaException("Null resource OID"));
             fixNoResourceIfRequested(checkResult, ShadowStatistics.NO_RESOURCE_OID);
-			applyFixes(checkResult, shadow, workerTask, result);
+            applyFixes(checkResult, shadow, workerTask, result);
             return;
         }
         PrismObject<ResourceType> resource = resources.get(resourceOid);
@@ -313,13 +299,13 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
                 resource = provisioningService.getObject(ResourceType.class, resourceOid, null, workerTask, result);
             } catch (ObjectNotFoundException e) {
                 checkResult.recordError(
-						ShadowStatistics.NO_RESOURCE, new ObjectNotFoundException("Resource object does not exist: " + e.getMessage(), e));
+                        ShadowStatistics.NO_RESOURCE, new ObjectNotFoundException("Resource object does not exist: " + e.getMessage(), e));
                 fixNoResourceIfRequested(checkResult, ShadowStatistics.NO_RESOURCE);
-				applyFixes(checkResult, shadow, workerTask, result);
+                applyFixes(checkResult, shadow, workerTask, result);
                 return;
             } catch (SchemaException e) {
                 checkResult.recordError(
-						ShadowStatistics.CANNOT_GET_RESOURCE, new SchemaException("Resource object has schema problems: " + e.getMessage(), e));
+                        ShadowStatistics.CANNOT_GET_RESOURCE, new SchemaException("Resource object has schema problems: " + e.getMessage(), e));
                 return;
             } catch (CommonException|RuntimeException e) {
                 checkResult.recordError(ShadowStatistics.CANNOT_GET_RESOURCE, new SystemException("Resource object cannot be fetched for some reason: " + e.getMessage(), e));
@@ -337,7 +323,7 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
         }
 
         if (checkExtraData) {
-            checkOrFixShadowActivationConsistency(checkResult, shadow, fixExtraData);
+            checkOrFixShadowActivationConsistency(checkResult, shadow);
         }
 
         PrismObject<ShadowType> fetchedShadow = null;
@@ -390,7 +376,7 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
                 resourceSchema = RefinedResourceSchemaImpl.getRefinedSchema(context.getResource(), LayerType.MODEL, prismContext);
             } catch (SchemaException e) {
                 checkResult.recordError(
-						ShadowStatistics.CANNOT_GET_REFINED_SCHEMA, new SchemaException("Couldn't derive resource schema: " + e.getMessage(), e));
+                        ShadowStatistics.CANNOT_GET_REFINED_SCHEMA, new SchemaException("Couldn't derive resource schema: " + e.getMessage(), e));
                 return;
             }
             if (resourceSchema == null) {
@@ -410,7 +396,7 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
             provisioningService.applyDefinition(shadow, workerTask, result);
         } catch (SchemaException|ObjectNotFoundException|CommunicationException|ConfigurationException|ExpressionEvaluationException e) {
             checkResult.recordError(
-					ShadowStatistics.OTHER_FAILURE, new SystemException("Couldn't apply definition to shadow from repo", e));
+                    ShadowStatistics.OTHER_FAILURE, new SystemException("Couldn't apply definition to shadow from repo", e));
             return;
         }
 
@@ -427,49 +413,49 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
         }
 
         for (RefinedAttributeDefinition<?> identifier : identifiers) {
-            PrismProperty property = attributesContainer.getValue().findProperty(identifier.getName());
+            PrismProperty<String> property = attributesContainer.getValue().findProperty(identifier.getItemName());
             if (property == null || property.size() == 0) {
-                checkResult.recordWarning(ShadowStatistics.OTHER_FAILURE, "No value for identifier " + identifier.getName());
+                checkResult.recordWarning(ShadowStatistics.OTHER_FAILURE, "No value for identifier " + identifier.getItemName());
                 continue;
             }
             if (property.size() > 1) {
                 // we don't expect multi-valued identifiers
                 checkResult.recordError(
-						ShadowStatistics.OTHER_FAILURE, new SchemaException("Multi-valued identifier " + identifier.getName() + " with values " + property.getValues()));
+                        ShadowStatistics.OTHER_FAILURE, new SchemaException("Multi-valued identifier " + identifier.getItemName() + " with values " + property.getValues()));
                 continue;
             }
             // size == 1
             String value = (String) property.getValue().getValue();
             if (value == null) {
-                checkResult.recordWarning(ShadowStatistics.OTHER_FAILURE, "Null value for identifier " + identifier.getName());
+                checkResult.recordWarning(ShadowStatistics.OTHER_FAILURE, "Null value for identifier " + identifier.getItemName());
                 continue;
             }
             if (checkUniqueness) {
                 if (!checkDuplicatesOnPrimaryIdentifiersOnly || primaryIdentifiers.contains(identifier)) {
-                    addIdentifierValue(checkResult, context, identifier.getName(), value, shadow);
+                    addIdentifierValue(context, identifier.getItemName(), value, shadow);
                 }
             }
             if (checkNormalization) {
-                doCheckNormalization(checkResult, identifier, value, context);
+                doCheckNormalization(checkResult, identifier, value);
             }
         }
 
-		applyFixes(checkResult, shadow, workerTask, result);
-	}
+        applyFixes(checkResult, shadow, workerTask, result);
+    }
 
-	private void applyFixes(ShadowCheckResult checkResult, PrismObject<ShadowType> shadow, Task workerTask,
-			OperationResult result) {
-		if (checkResult.isFixByRemovingShadow() || checkResult.getFixDeltas().size() > 0) {
-			try {
-				applyFix(checkResult, shadow, workerTask, result);
-				checkResult.setFixApplied(true);
-			} catch (CommonException e) {
-				checkResult.recordError(ShadowStatistics.CANNOT_APPLY_FIX, new SystemException("Couldn't apply the shadow fix", e));
-			}
-		}
-	}
+    private void applyFixes(ShadowCheckResult checkResult, PrismObject<ShadowType> shadow, Task workerTask,
+            OperationResult result) {
+        if (checkResult.isFixByRemovingShadow() || checkResult.getFixDeltas().size() > 0) {
+            try {
+                applyFix(checkResult, shadow, workerTask, result);
+                checkResult.setFixApplied(true);
+            } catch (CommonException e) {
+                checkResult.recordError(ShadowStatistics.CANNOT_APPLY_FIX, new SystemException("Couldn't apply the shadow fix", e));
+            }
+        }
+    }
 
-	private void fixNoResourceIfRequested(ShadowCheckResult checkResult, String problemCode) {
+    private void fixNoResourceIfRequested(ShadowCheckResult checkResult, String problemCode) {
         if (fixResourceRef) {
             checkResult.setFixByRemovingShadow(problemCode);
         }
@@ -492,11 +478,11 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
     }
 
     private PrismObject<ShadowType> fetchShadow(ShadowCheckResult checkResult, PrismObject<ShadowType> shadow,
-			Task task, OperationResult result) {
+            Task task, OperationResult result) {
         try {
-			return provisioningService.getObject(ShadowType.class, shadow.getOid(),
-					SelectorOptions.createCollection(GetOperationOptions.createDoNotDiscovery()),
-					task, result);
+            return provisioningService.getObject(ShadowType.class, shadow.getOid(),
+                    SelectorOptions.createCollection(GetOperationOptions.createDoNotDiscovery()),
+                    task, result);
         } catch (ObjectNotFoundException | CommunicationException | SchemaException | ConfigurationException | SecurityViolationException | ExpressionEvaluationException | RuntimeException | Error e) {
             checkResult.recordError(ShadowStatistics.CANNOT_FETCH_RESOURCE_OBJECT, new SystemException("The resource object couldn't be fetched", e));
             return null;
@@ -516,9 +502,9 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
             return;
         }
 
-        SynchronizationContext<? extends FocusType> syncCtx = null;
+        SynchronizationContext<? extends FocusType> syncCtx;
         try {
-        	syncCtx = synchronizationService.loadSynchronizationContext(fullShadow, fullShadow, resource, task.getChannel(), systemObjectCache.getSystemConfiguration(result), task, result);
+            syncCtx = synchronizationService.loadSynchronizationContext(fullShadow, fullShadow, null, resource, task.getChannel(), systemObjectCache.getSystemConfiguration(result), task, result);
         } catch (SchemaException | ObjectNotFoundException | ExpressionEvaluationException | RuntimeException | CommunicationException | ConfigurationException | SecurityViolationException e) {
             checkResult.recordError(ShadowStatistics.CANNOT_APPLY_FIX, new SystemException("Couldn't prepare fix for missing intent, because the synchronization policy couldn't be determined", e));
             return;
@@ -541,16 +527,16 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
 
     private void applyFix(ShadowCheckResult checkResult, PrismObject<ShadowType> shadow, Task workerTask, OperationResult result) throws CommonException {
         LOGGER.info("Applying shadow fix{}:\n{}", skippedForDryRun(),
-				checkResult.isFixByRemovingShadow() ?
-						"DELETE " + ObjectTypeUtil.toShortString(shadow)
-						: DebugUtil.debugDump(checkResult.getFixDeltas()));
+                checkResult.isFixByRemovingShadow() ?
+                        "DELETE " + ObjectTypeUtil.toShortString(shadow)
+                        : DebugUtil.debugDump(checkResult.getFixDeltas()));
         if (!dryRun) {
             try {
-            	if (checkResult.isFixByRemovingShadow()) {
-            		repositoryService.deleteObject(ShadowType.class, shadow.getOid(), result);
-				} else {
-					repositoryService.modifyObject(ShadowType.class, shadow.getOid(), checkResult.getFixDeltas(), result);
-				}
+                if (checkResult.isFixByRemovingShadow()) {
+                    repositoryService.deleteObject(ShadowType.class, shadow.getOid(), result);
+                } else {
+                    repositoryService.modifyObject(ShadowType.class, shadow.getOid(), checkResult.getFixDeltas(), result);
+                }
                 workerTask.recordObjectActionExecuted(shadow, ChangeType.MODIFY, null);
             } catch (Throwable t) {
                 workerTask.recordObjectActionExecuted(shadow, ChangeType.MODIFY, t);
@@ -567,7 +553,7 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
         }
     }
 
-    private void doCheckNormalization(ShadowCheckResult checkResult, RefinedAttributeDefinition<?> identifier, String value, ObjectTypeContext context) throws SchemaException {
+    private void doCheckNormalization(ShadowCheckResult checkResult, RefinedAttributeDefinition<?> identifier, String value) throws SchemaException {
         QName matchingRuleQName = identifier.getMatchingRuleQName();
         if (matchingRuleQName == null) {
             return;
@@ -578,16 +564,16 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
             matchingRule = matchingRuleRegistry.getMatchingRule(matchingRuleQName, identifier.getTypeName());
         } catch (SchemaException e) {
             checkResult.recordError(
-					ShadowStatistics.OTHER_FAILURE, new SchemaException("Couldn't retrieve matching rule for identifier " +
-                    identifier.getName() + " (rule name = " + matchingRuleQName + ")"));
+                    ShadowStatistics.OTHER_FAILURE, new SchemaException("Couldn't retrieve matching rule for identifier " +
+                    identifier.getItemName() + " (rule name = " + matchingRuleQName + ")"));
             return;
         }
 
         Object normalizedValue = matchingRule.normalize(value);
         if (!(normalizedValue instanceof String)) {
             checkResult.recordError(
-					ShadowStatistics.OTHER_FAILURE, new SchemaException("Normalized value is not a string, it's " + normalizedValue.getClass() +
-                    " (identifier " + identifier.getName() + ", value " + value));
+                    ShadowStatistics.OTHER_FAILURE, new SchemaException("Normalized value is not a string, it's " + normalizedValue.getClass() +
+                    " (identifier " + identifier.getItemName() + ", value " + value));
             return;
         }
         if (value.equals(normalizedValue)) {
@@ -596,17 +582,18 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
         String normalizedStringValue = (String) normalizedValue;
 
         checkResult.recordError(ShadowStatistics.NON_NORMALIZED_IDENTIFIER_VALUE,
-                new SchemaException("Non-normalized value of identifier " + identifier.getName()
+                new SchemaException("Non-normalized value of identifier " + identifier.getItemName()
                         + ": " + value + " (normalized form: " + normalizedValue + ")"));
 
         if (fixNormalization) {
-            PropertyDelta delta = identifier.createEmptyDelta(ItemPath.create(ShadowType.F_ATTRIBUTES, identifier.getName()));
+            PropertyDelta delta = identifier.createEmptyDelta(ItemPath.create(ShadowType.F_ATTRIBUTES, identifier.getItemName()));
+            //noinspection unchecked
             delta.setRealValuesToReplace(normalizedStringValue);
             checkResult.addFixDelta(delta, ShadowStatistics.NON_NORMALIZED_IDENTIFIER_VALUE);
         }
     }
 
-    private void addIdentifierValue(ShadowCheckResult checkResult, ObjectTypeContext context, QName identifierName, String identifierValue, PrismObject<ShadowType> shadow) {
+    private void addIdentifierValue(ObjectTypeContext context, QName identifierName, String identifierValue, PrismObject<ShadowType> shadow) {
 
         Map<String, Set<String>> valueMap = context.getIdentifierValueMap()
                 .computeIfAbsent(identifierName, k -> new HashMap<>());
@@ -624,21 +611,6 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
             existingShadowOids.add(shadow.getOid());
         }
     }
-
-//    private String shortDumpList(List<PrismObject<ShadowType>> list) {
-//        StringBuilder sb = new StringBuilder();
-//        sb.append('[');
-//        boolean first = true;
-//        for (PrismObject<ShadowType> object : list) {
-//            if (first) {
-//                first = false;
-//            } else {
-//                sb.append(", ");
-//            }
-//            sb.append(ObjectTypeUtil.toShortString(object.asObjectable()));
-//        }
-//        return sb.toString();
-//    }
 
     public ShadowStatistics getStatistics() {
         return statistics;
@@ -662,7 +634,7 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
                 QName identifier = idValEntry.getKey();
                 boolean first = true;
                 for (Map.Entry<String, Set<String>> valListEntry : idValEntry.getValue().entrySet()) {
-					Set<String> shadowsOids = valListEntry.getValue();
+                    Set<String> shadowsOids = valListEntry.getValue();
                     if (shadowsOids.size() <= 1) {
                         continue;
                     }
@@ -675,32 +647,32 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
                     details.append(" - value: ").append(valListEntry.getKey()).append(", shadows: ").append(shadowsOids.size()).append("\n");
                     List<PrismObject<ShadowType>> shadowsToConsider = new ArrayList<>();
                     for (String shadowOid : shadowsOids) {
-						PrismObject<ShadowType> shadow = null;
-						try {
-							shadow = repositoryService.getObject(ShadowType.class, shadowOid, null, result);
-						} catch (ObjectNotFoundException e) {
-							LOGGER.debug("Couldn't fetch shadow with OID {}, it was probably already deleted", shadowOid, e);
-						} catch (SchemaException e) {
-							LoggingUtils.logUnexpectedException(LOGGER, "Couldn't fetch shadow with OID {} from the repository", e, shadowOid);
-							continue;
-						}
-						details.append("   - ").append(shadow != null ? ObjectTypeUtil.toShortString(shadow) : shadowOid);
-						if (shadow != null) {
-							details.append("; sync situation = ").append(shadow.asObjectable().getSynchronizationSituation()).append("\n");
-							PrismContainer<ShadowAttributesType> attributesContainer = shadow.findContainer(ShadowType.F_ATTRIBUTES);
-							if (attributesContainer != null && !attributesContainer.isEmpty()) {
-								for (Item item : attributesContainer.getValue().getItems()) {
-									details.append("     - ").append(item.getElementName().getLocalPart()).append(" = ");
-									details.append(item.getRealValues());
-									details.append("\n");
-								}
-							}
-						}
+                        PrismObject<ShadowType> shadow = null;
+                        try {
+                            shadow = repositoryService.getObject(ShadowType.class, shadowOid, null, result);
+                        } catch (ObjectNotFoundException e) {
+                            LOGGER.debug("Couldn't fetch shadow with OID {}, it was probably already deleted", shadowOid, e);
+                        } catch (SchemaException e) {
+                            LoggingUtils.logUnexpectedException(LOGGER, "Couldn't fetch shadow with OID {} from the repository", e, shadowOid);
+                            continue;
+                        }
+                        details.append("   - ").append(shadow != null ? ObjectTypeUtil.toShortString(shadow) : shadowOid);
+                        if (shadow != null) {
+                            details.append("; sync situation = ").append(shadow.asObjectable().getSynchronizationSituation()).append("\n");
+                            PrismContainer<ShadowAttributesType> attributesContainer = shadow.findContainer(ShadowType.F_ATTRIBUTES);
+                            if (attributesContainer != null && !attributesContainer.isEmpty()) {
+                                for (Item<?, ?> item : attributesContainer.getValue().getItems()) {
+                                    details.append("     - ").append(item.getElementName().getLocalPart()).append(" = ");
+                                    details.append(item.getRealValues());
+                                    details.append("\n");
+                                }
+                            }
+                        }
                         if (duplicateShadowsDeleted.contains(shadowOid)) {
-							details.append("     (already deleted)\n");
-						} else if (shadow == null) {
-							details.append("     (inaccessible)\n");
-						} else {
+                            details.append("     (already deleted)\n");
+                        } else if (shadow == null) {
+                            details.append("     (inaccessible)\n");
+                        } else {
                             shadowsToConsider.add(shadow);
                         }
                     }
@@ -740,7 +712,7 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
 
             List<PrismObject<FocusType>> owners;
             if (checkOwners) {
-                owners = (List) shadowToDelete.getUserData(KEY_OWNERS);
+                owners = shadowToDelete.getUserData(KEY_OWNERS);
             } else {
                 owners = searchOwners(shadowToDelete, result);
             }
@@ -766,8 +738,8 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
                 continue;
             }
 
-            for (PrismObject owner : owners) {
-                List<ItemDelta> modifications = new ArrayList<>(2);
+            for (PrismObject<FocusType> owner : owners) {
+                List<ItemDelta<?, ?>> modifications = new ArrayList<>(2);
                 ReferenceDelta deleteDelta = prismContext.deltaFactory().reference().createModificationDelete(FocusType.F_LINK_REF, owner.getDefinition(),
                         prismContext.itemFactory().createReferenceValue(oid, ShadowType.COMPLEX_TYPE));
                 modifications.add(deleteDelta);
@@ -779,7 +751,7 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
                 LOGGER.info("Executing modify delta{} for owner {}:\n{}", skippedForDryRun(), ObjectTypeUtil.toShortString(owner), DebugUtil.debugDump(modifications));
                 if (!dryRun) {
                     try {
-                        repositoryService.modifyObject((Class) owner.getClass(), owner.getOid(), modifications, result);
+                        repositoryService.modifyObject(owner.getCompileTimeClass(), owner.getOid(), modifications, result);
                         task.recordObjectActionExecuted(owner, ChangeType.MODIFY, null);
                     } catch (ObjectNotFoundException | SchemaException | ObjectAlreadyExistsException | RuntimeException e) {
                         task.recordObjectActionExecuted(owner, ChangeType.MODIFY, e);
@@ -796,9 +768,11 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
     public void completeProcessing(Task task, OperationResult result) {
         super.completeProcessing(task, result);
 
-        String uniquenessReport = null;
+        String uniquenessReport;
         if (checkUniqueness) {
             uniquenessReport = reportOrFixUniqueness(task, result);
+        } else {
+            uniquenessReport = null;
         }
 
         logConfiguration("Shadow integrity check finished. It was run with the configuration:");
@@ -819,17 +793,13 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
     }
 
     // adapted from ProvisioningUtil
-    public void checkOrFixShadowActivationConsistency(ShadowCheckResult checkResult, PrismObject<ShadowType> shadow, boolean fix) {
-        if (shadow == null) {		// just for sure
+    private void checkOrFixShadowActivationConsistency(ShadowCheckResult checkResult, PrismObject<ShadowType> shadow) {
+        if (shadow == null) {        // just for sure
             return;
         }
         ActivationType activation = shadow.asObjectable().getActivation();
         if (activation == null) {
             return;
-        }
-        FailedOperationTypeType failedOperation = shadow.asObjectable().getFailedOperationType();
-        if (failedOperation == FailedOperationTypeType.ADD) {
-            return;		// in this case it's ok to have activation present
         }
 
         checkOrFixActivationItem(checkResult, shadow, activation.asPrismContainerValue(), ActivationType.F_ADMINISTRATIVE_STATUS);
@@ -842,14 +812,14 @@ public class ShadowIntegrityCheckResultHandler extends AbstractSearchIterativeRe
         checkOrFixActivationItem(checkResult, shadow, activation.asPrismContainerValue(), ActivationType.F_LOCKOUT_EXPIRATION_TIMESTAMP);
     }
 
-    private void checkOrFixActivationItem(ShadowCheckResult checkResult, PrismObject<ShadowType> shadow, PrismContainerValue<ActivationType> activation, ItemName itemName) {
-        PrismProperty property = activation.findProperty(itemName);
+    private void checkOrFixActivationItem(ShadowCheckResult checkResult, PrismObject<ShadowType> shadow, PrismContainerValue<?> activation, ItemName itemName) {
+        PrismProperty<?> property = activation.findProperty(itemName);
         if (property == null || property.isEmpty()) {
             return;
         }
         checkResult.recordWarning(ShadowStatistics.EXTRA_ACTIVATION_DATA, "Unexpected activation item: " + property);
         if (fixExtraData) {
-            PropertyDelta delta = prismContext.deltaFactory().property().createReplaceEmptyDelta(shadow.getDefinition(), ItemPath.create(ShadowType.F_ACTIVATION, itemName));
+            PropertyDelta<?> delta = prismContext.deltaFactory().property().createReplaceEmptyDelta(shadow.getDefinition(), ItemPath.create(ShadowType.F_ACTIVATION, itemName));
             checkResult.addFixDelta(delta, ShadowStatistics.EXTRA_ACTIVATION_DATA);
         }
     }
